--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "type": "module",
   "dependencies": {
     "bindings": "^1.5.0",
-    "express": "^4.18.2",
     "node-addon-api": "^7.1.0",
     "node-gyp": "^10.0.1",
     "ws": "^8.16.0"
   },
   "gypfile": true,
   "name": "wisp-server-cpp",
-  "version": "1.0.0",
+  "version": "1.0.1c",
   "description": "A WispServerCpp binding to node.",
   "main": "index.js",
   "devDependencies": {},
